syntax = "proto3";

package proto;

option go_package = "github.com/sergalkin/gophkeeper/api/proto";

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    string token = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message DeleteRequest {
}

message DeleteResponse {
}

service User {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
}